--- a/src/main/resources/templates/authorization.html
+++ b/src/main/resources/templates/authorization.html
@@ -17,7 +17,7 @@
     <a href ="file:///D:/ркчир/пр1/index.html"><img src = "/static/images/android-chrome-512x512.png" width="64" height="64"></a>
     <nav class="header-nav">
         <ul class="header-left-nav">
-            <li> <a href="/catalog">Каталог</a></li>
+            <li> <a href="/productcatalog">Каталог</a></li>
         </ul>
     </nav>
 </header>
