--- a/src/main/resources/templates/account.html
+++ b/src/main/resources/templates/account.html
@@ -6,8 +6,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Russo+One&display=swap" rel="stylesheet">
-    <link href = "/static/css/general.css" rel = "stylesheet">
-    <link href = "/static/css/account.css" rel = "stylesheet">
+    <link href = "/static/css/style2.css" rel = "stylesheet">
+    <link href = "/static/css/styleAccount.css" rel = "stylesheet">
     <link href = "/static/css/style1.css" rel = "stylesheet">
     <title>Аккаунт</title>
 </head>
@@ -63,8 +63,8 @@
 
 <script>
     window.onload = function () {
-        getNumberOfItems();
-        fillCartItems();
+        getAmount();
+        fillBasket();
     };
 </script>
 
@@ -112,7 +112,7 @@
         </section>
         <p><small>© 2023 ManStyle. Магазин одежды</small></p>
     </div>
-    <script src = "/static/js/number-of-items.js"></script>
+    <script src = "/static/js/functions.js"></script>
 </footer>
 
 
