--- a/src/main/resources/templates/basket.html
+++ b/src/main/resources/templates/basket.html
@@ -7,8 +7,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Russo+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
-    <link href = "/static/css/shopping-cart.css" rel = "stylesheet" >
-    <link href = "/static/css/general.css" rel = "stylesheet" >
+    <link href = "/static/css/styleBasket.css" rel = "stylesheet" >
+    <link href = "/static/css/style2.css" rel = "stylesheet">
     <link href = "/static/css/style1.css" rel = "stylesheet" >
     <title>Корзина</title>
 </head>
@@ -28,45 +28,29 @@
 </form>
 <main class="cart-main">
     <section class = "cart">
-        <div class = "cartGoods">
-            <div id="cart-items"></div>
+        <div class = "cartproduct">
+            <div id="cartElems"></div>
         </div>
     </section>
-    <form id = "myContacts" class = "contactsMenu" th:action = "@{/add-order}" th:method="POST" th:object="${order}">
+    <form id = "arrange-form" class = "arrangeForm" th:action = "@{/add-order}" th:method="POST" th:object="${order}">
         <h2>Итого:</h2>
         <div>
-            <input id = "text2" th:field="*{totalCost}" readonly><p>₽</p>
+            <input id = "totalSum" th:field="*{totalCost}" readonly><p>₽</p>
         </div>
-<!--        <h2>Оплата</h2>-->
-<!--        <div class = "paymentChoose">-->
-<!--            <label><input required type = "radio" name = "payment" th:field="*{paymentChoose}" th:value="карта">Оплата по карте</label>-->
-<!--            <label><input required type = "radio" name = "payment" th:field="*{paymentChoose}" th:value="наличные">Оплата наличными</label>-->
-<!--        </div>-->
         <div th:each = "product, i: *{orderItems}">
             <input th:id = "${'index' + __${i.index}__}" th:field="*{orderItems[__${i.index}__].product.id}" style="display: none;">
             <input th:id = "${'name' + __${i.index}__}" th:field="*{orderItems[__${i.index}__].product.name}" style="display:none;">
             <input th:id = "${'brand' + __${i.index}__}" th:field="*{orderItems[__${i.index}__].product.brand}" style="display:none;">
-            <!--            <input th:id = "${'amount' + __${i.index}__}" th:field="*{orderItems[__${i.index}__].amount}" style="display: none;">-->
             <input th:id = "${'productPrice' + __${i.index}__}" th:field="*{orderItems[__${i.index}__].product.productPrice}" style="display: none;">
         </div>
-<!--        Отправляем форму и очищаем всю корзину перед отправкой-->
-        <button type="submit" id="Oformit_but" class = "shineButton">Оформить</button>
-<!--        <button type="submit" id="Oformit_but" class = "shineButton" onclick = "removeAll()">Оформить</button>-->
-
-        <div id="cartModal" class="modal">
-            <div class="modal-content">
-                <span class="close">&times;</span>
-                <p>Корзина пуста. Пожалуйста, выберите что-нибудь.</p>
-            </div>
-        </div>
-
+        <button type="submit" id="arrangeBut" class = "arrangeButton">Оформить</button>
     </form>
 </main>
-<script src = "/static/js/order-gods.js"></script>
+<script src = "/static/js/basketFunctions.js"></script>
 <script>
     window.onload = function () {
-        getNumberOfItems();
-        fillCartItems();
+        getAmount();
+        fillBasket();
     };
 </script>
 
@@ -114,7 +98,7 @@
         </section>
         <p><small>© 2023 ManStyle. Магазин одежды</small></p>
     </div>
-    <script src = "/static/js/number-of-items.js"></script>
+    <script src = "/static/js/functions.js"></script>
 </footer>
 
 
